fix: no demo data flash on load, move name higher on mobile

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -170,7 +170,7 @@
 
 @media screen and (max-width: 499px) {
   .landing-intro {
-    top: 2%;
+    top: 0%;
   }
 
   .landing-intro h2 {
